# routes/index.js
@@ -1,4 +1,5 @@
 const router = require("express").Router();
+const passport = require("passport");
 
 router.use("/", require("./swagger"));
 
@@ -9,5 +10,16 @@ router.get("/", (req, res) => {
 router.use("/movies", require("./movies"));
 
 router.use("/rockbands", require("./rockbands"));
+
+router.get("/login", passport.authenticate("github"), (req, res) => {});
+
+router.get("/logout", function (req, res, next) {
+  req.logout(function (err) {
+    if (err) {
+      return next(err);
+    }
+    res.redirect("/");
+  });
+});
 
 module.exports = router;
